# FoodRPG

./: .gitignore  README.md  main.py  pyproject.toml
UI/: accessibility_menu.py  controls.py  help_menu.py  main_menu.py  new_game_screen.py  save_slots_menu.py  screen.py  settings_menu.py  speech_menu.py
config/: business_models.json  player_defaults.json
core/: game.py  gamestate.py  state_object.py
core/base/: controller.py  controls.py  screen.py  state_object.py
core/controllers/: accessibility_controller.py  base_controller.py  help_controller.py  main_menu_controller.py  new_game_controller.py  save_slots_controller.py  settings_controller.py  speech_controller.py
core/helpers/: document_helper.py
core/models/: player.py
core/services/: notifications.py  paths.py  save_load.py  screen_manager.py  settings.py  speech.py
docs/helpfiles/: about.md  accessibility.md  credits.md  getting_started.md  installation.md  introduction.md  keyboard_shortcuts.md
docs/legal/: LICENSE.md  PRIVACY.md  TERMS.md
services/: screen_manager.py  speech.py
