[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "FoodRPG"
version = "0.1.0"
description = "Accessible, menu-driven, audio-first RPG for the blind community and users of screen readers and text-to-speech software."
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }

authors = [
    { name = "Kavya" }
]

keywords = [
    "accessible",
    "accessibility",
    "audio",
    "blind",
    "game",
    "pygame",
    "rpg",
    "screen-reader",
    "text-to-speech",
    "tts"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Topic :: Software Development :: Accessibility"
]

dependencies = [
    "pygame-ce~=2.5",
    "prismatoid~=0.17"
]


[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.14"
strict = false
